contrib/zebra/src/java/org/apache/hadoop/zebra/types/TableStorageParser.java
/* Generated By:JavaCC: Do not edit this line. TableStorageParser.java */
package org.apache.hadoop.zebra.types;
import java.io.*;
import java.util.*;

public class TableStorageParser implements TableStorageParserConstants {
           public static void main( String[] args )
           throws ParseException, TokenMgrError, java.io.FileNotFoundException, java.io.IOException, java.lang.ClassNotFoundException {
                                        /*
					FileInputStream input = new FileInputStream("/tmp/schema");
					ObjectInputStream objin = new ObjectInputStream(input);
					Schema schema = (Schema) objin.readObject();
					objin.close();
					input = new FileInputStream("store");
					System.out.println("Table Schema:");
					System.out.println("--------------------------");
					System.out.println(schema.toString());
					Partition partition = new Partition(
               TableStorageParser parser = new TableStorageParser(schema.toString(), schema) ;
					ArrayList<CGSchema> schemas = parser.StorageSchema();
					System.out.println("Column Groups:");
					System.out.println("--------------------------");
					for (int i = 0; i < schemas.size(); i++)
					{
						System.out.println(schemas.get(i).toString());
						System.out.println("==========================");
					}
					System.out.println("Table Schema with Storage Hints");
					System.out.println(schema.toString());
					System.out.println("==========================");
					System.out.println("Column Map:");
					System.out.println("--------------------------");
					Map<String, Schema.ColumnMappingEntry> colmap = schema.getColMap();
					if (!colmap.isEmpty())
					{
						Set<Map.Entry<String, Schema.ColumnMappingEntry>> entrySet = colmap.entrySet();
						Map.Entry<String, Schema.ColumnMappingEntry>[] array = entrySet.toArray(new Map.Entry[entrySet.size()]);
						for (int j = 0; j < colmap.size(); j++)
						{
							System.out.println("[Column = " + array[j].getKey() +" CG= "+ array[j].getValue().getCGIndex()+"."+array[j].getValue().getColumnIndex()+"]");
						}
					}
					Schema.ColumnMappingEntry cm;
					if (args.length > 0)
					{
						System.out.println("==========================");
						System.out.println("Column CG Index:");
						System.out.println("--------------------------");
						if ((cm = schema.getColMapping(args[0])) != null)
							System.out.println(args[0]+":CG= "+ cm.getCGIndex()+"."+cm.getColumnIndex());
						else
							System.out.println(args[0]+":Column not found !");
					}
					Schema.ColumnSchema fs;
					if (args.length > 0)
					{
						System.out.println("==========================");
						System.out.println("Column Schema:");
						System.out.println("--------------------------");
						StringBuilder sb = new StringBuilder();
						if ((fs = schema.getColumnSchema(args[0])) != null)
						{
						// print out a particular  column's CG index
						//	System.out.println(args[0]+":Schema = "+ fs.name +":"+ColumnType.genTypeToNameMap().get(fs.type));
							Schema.stringifySchema(sb, fs.schema, fs.type, false, false);
							if (sb.toString().isEmpty())
								System.out.println(args[0]+":Schema = "+ ColumnType.findTypeName(fs.type));
							else
								System.out.println(args[0]+":Schema = "+ ColumnType.findTypeName(fs.type)+":"+sb.toString());
						} else
							System.out.println(args[0]+":Column not found !");
					}
					*/
      }
                public TableStorageParser(java.io.Reader in, Partition partition, Schema schema) { this(in); mSchema = schema; this.partition = partition;}
                private Schema mSchema;
                private int mDefaultCGIndex = -1;
                private String mCompressor = "lzo", mSerializer = "pig";
                private String mOwner = null, mGroup = null;
                private short mPerm = -1;
                private int mCGCount = 0;
                private Partition partition;

  final public ArrayList<CGSchema> StorageSchema() throws ParseException, ParseException {
        ArrayList<CGSchema> s = new ArrayList();
        CGSchema fs;
        CGSchema defaultSchema;
    try {
      if (jj_2_1(2)) {
        jj_consume_token(0);
                        defaultSchema = partition.generateDefaultCGSchema(mCompressor, mSerializer, mOwner, mGroup, mPerm, 0);
                        if (defaultSchema != null)
                                s.add(defaultSchema);
                        {if (true) return s;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 0:
        case COMPRESS:
        case SERIALIZE:
        case SECURE:
        case 23:
        case 24:
          fs = FieldSchema();
                                    mCGCount++; if (fs != null) s.add(fs);
          label_1:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case 23:
              ;
              break;
            default:
              jj_la1[0] = jj_gen;
              break label_1;
            }
            jj_consume_token(23);
            fs = FieldSchema();
                                         mCGCount++; if (fs != null) s.add(fs);
          }
          jj_consume_token(0);
                        defaultSchema = partition.generateDefaultCGSchema(mCompressor, mSerializer, mOwner, mGroup, mPerm, mDefaultCGIndex == -1 ? mDefaultCGIndex = mCGCount++ : mDefaultCGIndex);
                        if (defaultSchema != null)
                                s.add(defaultSchema);
                        {if (true) return s;}
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (TokenMgrError e) {
                {if (true) throw new ParseException(e.getMessage());}
    }
    throw new Error("Missing return statement in function");
  }

  final public CGSchema FieldSchema() throws ParseException {
        Token t1 = null, t2 = null;
        Schema fs = null;
        CGSchema cs = null;
        String compressor = null;
        String serializer = null;
        String secureBy   = null;
        String owner       = null;
        String group      = null;
        short perm                = -1;
        String secure     = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 24:
      jj_consume_token(24);
      fs = RecordSchema(null);
      jj_consume_token(25);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMPRESS:
      case SERIALIZE:
      case SECURE:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMPRESS:
        jj_consume_token(COMPRESS);
        t1 = jj_consume_token(COMPRESSOR);
            if(compressor != null )
            {
                                String msg = "Compression information defined more than once";
                                {if (true) throw new ParseException(msg);}
            } else {
                compressor = t1.image;
            }
        break;
      case SERIALIZE:
        jj_consume_token(SERIALIZE);
        t1 = jj_consume_token(SERIALIZER);
            if(serializer != null )
            {
                                String msg = "Serializer Information defined more than once";
                                {if (true) throw new ParseException(msg);}
            } else
                serializer = t1.image;
        break;
      case SECURE:
        t1 = jj_consume_token(SECURE);
            if(secure != null)
            {
                                String msg = "SECURE BY defined more than once";
                                {if (true) throw new ParseException(msg);}

            } else
                secure = t1.image;
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case USER:
            jj_consume_token(USER);
            jj_consume_token(26);
            t1 = jj_consume_token(IDENTIFIER);
              if(owner != null)
              {
                                String msg = "User defined more than once";
                                {if (true) throw new ParseException(msg);}
              } else
                        owner = t1.image;
            break;
          case GROUP:
            jj_consume_token(GROUP);
            jj_consume_token(26);
            t1 = jj_consume_token(IDENTIFIER);
              if(group != null)
              {
                                String msg = "Group defined more than once";
                                {if (true) throw new ParseException(msg);}
              } else
                        group = t1.image;
            break;
          case PERM:
            jj_consume_token(PERM);
            jj_consume_token(26);
            t1 = jj_consume_token(SHORT);
              if(perm != -1)
              {
                                String msg = "Perms defined more than once";
                                {if (true) throw new ParseException(msg);}
              } else
                        perm = Short.parseShort(t1.image, 8);
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case USER:
          case GROUP:
          case PERM:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
//		String compressor, serializer;
                System.out.println( "compressor = " + compressor + " serializer = " + serializer + " " + owner + " " + group + " " + perm);
                if (compressor == null)
                        compressor = "lzo";
                if (serializer == null)
                        serializer = "pig";
                if (fs == null)
                {
                        if (mDefaultCGIndex != -1)
                        {
                                String msg = "Default Storage Information defined more than once";
                                {if (true) throw new ParseException(msg);}
                        }
                        mDefaultCGIndex = mCGCount;
                        mCompressor = compressor;
                        mSerializer = serializer;
                        mOwner          = owner;
                        mGroup          = group;
                        mPerm           = perm;
                } else
                        cs = new CGSchema(fs, false, serializer, compressor, owner, group, perm);
                {if (true) return cs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema ColumnSchema(int colIndex) throws ParseException, ParseException {
        Token t1;
        String name = "";
        Schema.ColumnSchema fs = null;
    if (jj_2_2(2147483647)) {
      fs = SchemaRecord(mSchema, name, colIndex);
    } else if (jj_2_3(2147483647)) {
      fs = SchemaMap(mSchema, name, colIndex);
    } else if (jj_2_4(2147483647)) {
      fs = AtomSchema(mSchema, name, colIndex);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema AtomSchema(Schema schema, String name, int colIndex) throws ParseException, ParseException {
        Token t1 = null;
        Schema.ColumnSchema fs;
    t1 = jj_consume_token(IDENTIFIER);
                        Schema.ColumnSchema fs0 = schema.getColumn(t1.image);
                        name += t1.image;
                        if (fs0 == null)
                        {
                                String msg = "Column "+name+" not defined in schema";
                                {if (true) throw new ParseException(msg);}
                        }
                        /* create a new field schema using concatenated name */
                        if (!partition.getPartitionInfo().setCGIndex(fs0, mCGCount, colIndex, name))
                        {
                                {if (true) throw new ParseException("Column "+name+" specified more than once!");}
                        }
                        fs = new Schema.ColumnSchema(name, fs0.schema, fs0.type);
                        {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema SchemaMap(Schema schema, String name, int colIndex) throws ParseException, ParseException {
        Token t1 = null;
        Schema.ColumnSchema fs;
    t1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(27);
    fs = AnonymousMapSchema(schema.getColumn(t1.image), t1.image, 0, colIndex);
                {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema SchemaRecord(Schema schema, String name, int colIndex) throws ParseException, ParseException {
        Token t1 = null;
        Schema.ColumnSchema fs;
    t1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(28);
    fs = AnonymousRecordSchema(schema.getColumn(t1.image), t1.image, 0, colIndex);
                {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema AnonymousColumnSchema(Schema.ColumnSchema schema, String name, int cl, int colIndex) throws ParseException, ParseException {
        Token t1;
        Schema.ColumnSchema fs = null;
    if (jj_2_5(2147483647)) {
      fs = AnonymousSchemaRecord(schema, name, cl, colIndex);
    } else if (jj_2_6(2147483647)) {
      fs = AnonymousSchemaMap(schema, name, cl, colIndex);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema AnonymousSchemaRecord(Schema.ColumnSchema schema, String name, int cl, int colIndex) throws ParseException, ParseException {
        Schema.ColumnSchema fs;
    jj_consume_token(28);
    fs = AnonymousRecordSchema(schema, name, cl, colIndex);
                {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema AnonymousSchemaMap(Schema.ColumnSchema schema, String name, int cl, int colIndex) throws ParseException, ParseException {
        Schema.ColumnSchema fs;
    jj_consume_token(27);
    fs = AnonymousMapSchema(schema, name, cl, colIndex);
                {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }

  final public Schema RecordSchema(Schema list) throws ParseException, ParseException {
        if (list == null)
                list = new Schema();
        Schema.ColumnSchema fs = null;
        int colIndex = 0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      fs = ColumnSchema(colIndex);
                                             list.add(fs);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 29:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        jj_consume_token(29);
        fs = ColumnSchema(++colIndex);
                                                     list.add(fs);
      }
      break;
    default:
      jj_la1[8] = jj_gen;

                    list = null;
    }
          {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public Schema.ColumnSchema AnonymousRecordSchema(Schema.ColumnSchema schema, String name, int cl, int colIndex) throws ParseException, ParseException {
        Schema.ColumnSchema fs = null, fs0 = null;
        Token t;
        if (schema == null)
        {
                String msg = "no matching column: " + name;
                throw new ParseException(msg);
        } else if (schema.type != ColumnType.RECORD && schema.type != ColumnType.COLLECTION) {
                String msg = "Column " + name + " is not a record or a collection of records";
                throw new ParseException(msg);
        } else if (schema.type == ColumnType.COLLECTION) {
                String msg = "Split of COLLECTION Column, " + name + ", is not supported in this release";
                throw new ParseException(msg);
  }
        if (schema.type == ColumnType.COLLECTION)
        {
                cl += 1;
                if (schema.schema.getNumColumns() == 1 && schema.schema.getColumn(0).type == ColumnType.RECORD && (schema.schema.getColumn(0).name == null || schema.schema.getColumn(0).name.isEmpty()))
                // an anonymous record inside a collection: go one level lower
                {
                        schema = schema.schema.getColumn(0);
                        partition.setSplit(schema, Partition.SplitType.RECORD, Partition.SplitType.RECORD, name, null, false);
                }
        }
    if (jj_2_7(2)) {
      t = jj_consume_token(IDENTIFIER);
      fs = AnonymousSchemaRecord(schema.schema.getColumn(t.image), name + "." + t.image, cl, colIndex);
            partition.setSplit(schema, Partition.SplitType.RECORD, Partition.SplitType.RECORD, name, t.image, true);
                        {if (true) return fs;}
    } else if (jj_2_8(2)) {
      t = jj_consume_token(IDENTIFIER);
      fs = AnonymousSchemaMap(schema.schema.getColumn(t.image), name + "." + t.image, cl, colIndex);
            partition.setSplit(schema, Partition.SplitType.RECORD, Partition.SplitType.MAP, name, t.image, true);
                        {if (true) return fs;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
            partition.setSplit(schema, Partition.SplitType.RECORD, Partition.SplitType.NONE, name, t.image, false);
                        name = name + "." + t.image;
                        fs0 = schema.schema.getColumn(t.image);
                        if (fs0 == null)
                        {
                                String msg = "no matching column: " + name;
                                {if (true) throw new ParseException(msg);}
                        }
                        if (!partition.setCGIndex(fs0, mCGCount, colIndex, name))
                                {if (true) throw new ParseException("Column "+name+" specified more than once!");}
                        fs = new Schema.ColumnSchema(name, fs0.schema, fs0.type);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return fs;}
    throw new Error("Missing return statement in function");
  }
